Back In Time

Version 1.4.4-dev (development of upcoming release)
* Fix bug: Open symlinked folders in file view (#1476)
* Fix bug: Respect dark mode using color roles (#1601)
* Fix: "Highly recommended" exclusion pattern in "Manage Profile" dialog's "Exclude" tab show missings only (#1620)
* Build: Activate PyLint error E0401 (import-error)
* Dependency: Migration to PyQt6
* Build: PyLint unit test is skipped if PyLint isn't installed, but will always run on TravisCI (#1634)
* Feature: Support rsync '--one-file-system' in Expert Options (#1598)
* Feature: "*-dev" version strings contain last commit hash (#1637)
* Build: Git commit hash is presevered while "make install" (#1637)
* Build: Fix bash-completion symlink creation while installing & adding --diagnostics (#1615)
* Build: Activate PyLint error E602 (undefined-variable)
* Build: TravisCI use PyQt (except arch "ppc64le")
* Fix bug: `make install` ignored $(DEST) in file migration part (#1630)

Version 1.4.3 (2024-01-30)
* Feature: Exclude 'SingletonLock' and 'SingletonCookie' (Discord) and 'lock' (Mozilla Firefox) files by default (part of #1555)
* Work around: Relax `rsync` exit code 23: Ignore instead of error now (part of #1587)
* Feature (experimental): Add new snapshot log filter `rsync transfer failures (experimental)` to find them easier (they are normally not shown as "error").
                          This feature is experimental because it is based on hard-coded error message strings in the rsync source code
                          and may possibly not find all rsync messages or show false positives.
* Fix bug: 'qt5_probing.py' hangs when BiT is run as root and no user is logged into a desktop environment (#1592 and #1580)
* Fix bug: Launching BiT GUI (root) hangs on Wayland without showing the GUI (#836)
* Improve: Launcher for BiT GUI (root) does not enforce Wayland anymore but uses same settings as for BiT GUI (userland) (#1350)